--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -2,9 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <string name="app_name">Trình quản lí Aliucord</string>
   <string name="app_description">Bản sửa đổi từ ứng dụng Discord Android</string>
-  <string name="aliucord">Aliucord</string>
-  <string name="discord">Discord</string>
-  <string name="github">Github</string>
   <string name="support_server">Máy chủ hỗ trợ</string>
   <string name="installer">Trình cài đặt</string>
   <string name="action_cancel">Hủy bỏ</string>
@@ -18,11 +15,9 @@
   <string name="action_install">Cài đặt</string>
   <string name="action_uninstall">Gỡ cài đặt</string>
   <string name="action_add_install">Thêm Cài đặt</string>
-  <string name="action_update_install">Update Aliucord Installation</string>
   <string name="action_update">Cập nhật</string>
   <string name="action_clear">Xoá</string>
   <string name="action_launch">Khởi động</string>
-  <string name="action_launch_aliucord">Launch</string>
   <string name="action_close">Đóng</string>
   <string name="action_open_settings">Mở cài đặt</string>
   <string name="action_search">Tìm kiếm</string>
@@ -47,9 +42,8 @@
   <string name="setting_dynamic_color">Màu động</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_developer_options">Tùy chọn nhà phát triển</string>
-  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Giữ lại các bản vá APKs</string>
-  <string name="setting_keep_patched_apks_desc">Không xóa bỏ các bản vá APKs sau khi cài đặt (dành cho cài đặt thủ công)</string>
   <string name="settings_clear_cache">Xoá bộ nhớ đệm</string>
   <string name="theme_system">Hệ thống</string>
   <string name="theme_dark">Tối</string>
@@ -57,10 +51,8 @@
   <string name="plugins_title">Tiện ích bổ sung</string>
   <string name="plugins_view_changelog">Xem nhật ký thay đổi tại %1$s</string>
   <string name="plugins_delete_plugin">Uninstall %s</string>
-  <string name="plugins_delete_plugin_body">Bạn có chắc chắn muốn gỡ cài đặt tiện ích này không?</string>
   <string name="plugins_none_installed">Không có tiện ích nào được tải xuống!</string>
   <string name="plugins_changelog_media">Phương tiện nhật ký thay đổi</string>
-  <string name="plugins_plugin_title">§Tiện ích§%1$s§ v%2$s</string>
   <string name="plugins_error">Đã xảy ra lỗi khi xử lí tiện ích mở rộng!</string>
   <string name="navigation_back">Quay lại</string>
   <string name="navigation_about">Giới thiệu</string>
@@ -68,7 +60,7 @@
   <string name="navigation_settings">Cài đặt</string>
   <string name="contributors_lead">Lead</string>
   <string name="contributors">Những người đóng góp</string>
-  <string name="contributors_contributions">%o đóng góp</string>
+  <string name="contributors_contributions">%s đóng góp</string>
   <string name="network_load_fail">Tải thất bại</string>
   <string name="network_warning_title">Mạng có hạn mức dữ liệu</string>
   <string name="network_warning_body">Có vẻ như bạn đang kết nối với dữ liệu di động hoặc một mạng có hạn mức dữ liệu. Để tiếp tục cài đặt, một vài trăm megabyte có thể sẽ được tải xuống. Bạn có chắc chắn muốn tiếp tục không?</string>
@@ -95,7 +87,7 @@
   <string name="install_error_blocked">Installation was blocked</string>
   <string name="install_error_invalid">One or more APKs were invalid or corrupt</string>
   <string name="install_error_conflict">Conflicts with an existing app, usually due to mismatched signatures</string>
-  <string name="install_error_storage">Not enough available storage to install</string>
+  <string name="install_error_storage">Not enough storage available to install</string>
   <string name="install_error_incompatible">Application is incompatible with this device</string>
   <string name="install_error_timeout">Installation timed out</string>
   <string name="install_group_prepare">Prepare</string>
@@ -103,10 +95,9 @@
   <string name="install_group_patch">Vá Apks</string>
   <string name="install_group_install">Tải xuống</string>
   <string name="patch_step_fetch_kt_version">Đang tìm kiếm phiên bản Discord</string>
-  <string name="patch_step_downgrade_check">Checking for older installations</string>
+  <string name="patch_step_downgrade_check">Checking for newer installations</string>
   <string name="patch_step_dl_kt_apk">Đang tải xuống Discord APK</string>
   <string name="patch_step_dl_kotlin">Tải xuống thư viện Kotlin</string>
-  <string name="patch_step_dl_injector">Đang tải xuống injector</string>
   <string name="patch_step_dl_aliuhook">Đang tải xuống thư viện Aliuhook</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Copying dependencies</string>
@@ -127,7 +118,7 @@
   <string name="status_success">Thành công</string>
   <string name="status_failed">Thất bại</string>
   <string name="installer_abort_title">Really exit?</string>
-  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
+  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation?</string>
   <string name="updater_body">Một bản cập nhật mới đã được phát hành cho Aliucord Manager! Nó cần cập nhật để hoạt động đúng. Bạn có muốn cập nhật không?</string>
   <string name="updater_title">Cập nhật: %1$s</string>
   <string name="updater_fail">Failed to check for updates!</string>
@@ -148,7 +139,7 @@
   <string name="patchopts_debuggable_title">Debuggable</string>
   <string name="patchopts_debuggable_desc">Enable the debuggable manifest flag. Only use this if you know what you are doing!</string>
   <string name="patchopts_icon_title">Replace app icon</string>
-  <string name="patchopts_icon_desc">Changes the app\'s icon to use Aliucord branding instead of Discord\'s own.</string>
+  <string name="patchopts_icon_desc">Change the app\'s icon to Aliucord\'s icon (or a custom one) instead of Discord\'s.</string>
   <string name="patchopts_divider_basic">Basic</string>
   <string name="patchopts_divider_advanced">Advanced</string>
   <string name="patchopts_warning_invalid_iconopts">The selected icon options are invalid!</string>
@@ -160,7 +151,7 @@
   <string name="iconopts_variant_desc_discord">Does not alter the original icon, instead only adding the missing monochrome icon to the APK.</string>
   <string name="iconopts_variant_desc_aliucord">Changes the original icon color to Aliucord\'s branding.</string>
   <string name="iconopts_variant_desc_color">Select a custom icon background color.</string>
-  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Android 8+ only.</string>
+  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Maximum image size is 256KiB.</string>
   <string name="iconopts_colorpicker_title">Hue &amp; Saturation</string>
   <string name="iconopts_colorpicker_desc">The main HSV color components.</string>
   <string name="iconopts_lightness_title">Lightness</string>
@@ -210,9 +201,7 @@
   <string name="fun_fact_5">Did you know AliucordRN spawned Enmity and Vendetta?</string>
   <string name="fun_fact_6">Having issues? Visit the #support channel in our Discord!</string>
   <string name="fun_fact_7">The IWillCrashYourDiscord plugin crashes your discord.</string>
-  <string name="fun_fact_8">\"@Vendicated my bad.\"</string>
   <string name="fun_fact_9">Aliucord can run on WearOS</string>
   <string name="fun_fact_10">Aliucord uses the *real* old UI, from mid-2022!</string>
   <string name="fun_fact_11">There was an attempt to make Aliucord run on iOS…</string>
-  <string name="fun_fact_12">veeeee 😭</string>
 </resources>
