--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -2,9 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <string name="app_name">Aliucord Manager</string>
   <string name="app_description">Μία τροποποίηση για την εφαρμογή Discord Android</string>
-  <string name="aliucord">Aliucord</string>
-  <string name="discord">Discord</string>
-  <string name="github">GitHub</string>
   <string name="support_server">Διακομιστής Υποστήριξης</string>
   <string name="installer">Εγκαταστάτης</string>
   <string name="action_cancel">Ακύρωση</string>
@@ -18,11 +15,9 @@
   <string name="action_install">Εγκατάσταση</string>
   <string name="action_uninstall">Απεγκατάσταση</string>
   <string name="action_add_install">Προσθήκη Εγκατάστασης</string>
-  <string name="action_update_install">Update Aliucord Installation</string>
   <string name="action_update">Ενημέρωση</string>
   <string name="action_clear">Εκκαθάριση</string>
   <string name="action_launch">Έναρξη</string>
-  <string name="action_launch_aliucord">Launch</string>
   <string name="action_close">Κλείσιμο</string>
   <string name="action_open_settings">Άνοιγμα ρυθμίσεων</string>
   <string name="action_search">Αναζήτηση</string>
@@ -35,7 +30,6 @@
   <string name="action_open_info">Άνοιγμα πληροφοριών</string>
   <string name="action_reset_default">Επαναφορά προεπιλογών</string>
   <string name="permissions_grant_title">Εκχώρηση αδειών</string>
-  <string name="storage_permissions_grant_body">Για να λειτουργήσει σωστά ο Aliucord Manager, πρέπει να εκχωρήσετε δικαιώματα αρχείου. Δεδομένου ότι τα κοινόχρηστα δεδομένα αποθηκεύονται στο ~/Aliucord, απαιτούνται δικαιώματα για να λειτουργήσει ο Manager.</string>
   <string name="install_permissions_grant_body">Installing Aliucord requires granting permissions to install apps from unknown sources.</string>
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Αποτυχία εκκίνησης του Aliucord</string>
@@ -47,9 +41,8 @@
   <string name="setting_dynamic_color">Δυναμικό χρώμα</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_developer_options">Επιλογές προγραμματιστών</string>
-  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Διατήρηση patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Μη διαγράψετε patched APKs μετά την εγκατάσταση (για χειροκίνητη εγκατάσταση)</string>
   <string name="settings_clear_cache">Εκκαθάριση προσωρινής μνήμης</string>
   <string name="theme_system">Σύστημα</string>
   <string name="theme_dark">Σκοτεινό</string>
@@ -57,10 +50,8 @@
   <string name="plugins_title">Plugins</string>
   <string name="plugins_view_changelog">Προβολή αλλαγών για %1$s</string>
   <string name="plugins_delete_plugin">Uninstall %s</string>
-  <string name="plugins_delete_plugin_body">Είσαστε βέβαιοι ότι θέλετε να απεγκαταστήσετε αυτό το plugin;</string>
   <string name="plugins_none_installed">Δεν υπάρχουν εγκατεστημένα plugins!</string>
   <string name="plugins_changelog_media">Πολυμέσα Αλλαγών</string>
-  <string name="plugins_plugin_title">§plugin§%1$s§ v%2$s</string>
   <string name="plugins_error">Παρουσιάστηκε σφάλμα κατά την επεξεργασία των plugins!</string>
   <string name="navigation_back">Πίσω</string>
   <string name="navigation_about">Σχετικά με</string>
@@ -68,10 +59,9 @@
   <string name="navigation_settings">Ρυθμίσεις</string>
   <string name="contributors_lead">Lead</string>
   <string name="contributors">Συνεισφέροντες</string>
-  <string name="contributors_contributions">%o συνεισφορές</string>
+  <string name="contributors_contributions">%s συνεισφορές</string>
   <string name="network_load_fail">Αποτυχία φόρτωσης</string>
   <string name="network_warning_title">Μετρημένο δίκτυο</string>
-  <string name="network_warning_body">Φαίνεται ότι είστε συνδεδεμένοι με δεδομένα κινητής τηλεφωνίας ή ένα ενδεχομένως μετρημένο δίκτυο. Για να συνεχίσετε την εγκατάσταση, θα μπορούσε να γίνει λήψη αρκετών εκατοντάδων megabytes. Είστε σίγουροι ότι θέλετε να συνεχίσετε;</string>
   <string name="network_warning_disable">Don\'t show this again</string>
   <string name="version_supported">Υποστηριζόμενη έκδοση:</string>
   <string name="version_none">Κανένα</string>
@@ -103,10 +93,9 @@
   <string name="install_group_patch">Ενημέρωση APKs</string>
   <string name="install_group_install">Εγκατάσταση</string>
   <string name="patch_step_fetch_kt_version">Λήψη επιλεγμένης έκδοσης του Discord</string>
-  <string name="patch_step_downgrade_check">Έλεγχος για παλαιότερες εγκαταστάσεις</string>
   <string name="patch_step_dl_kt_apk">Λήψη Discord APK</string>
   <string name="patch_step_dl_kotlin">Λήψη βιβλιοθήκης Kotlin</string>
-  <string name="patch_step_dl_injector">Λήψη Injector</string>
+  <string name="patch_step_dl_injector">Λήψη Aliucord Injector</string>
   <string name="patch_step_dl_aliuhook">Λήψη βιβλιοθήκης Aliuhook</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Αντιγραφή εξαρτήσεων</string>
@@ -127,7 +116,6 @@
   <string name="status_success">Επιτυχής</string>
   <string name="status_failed">Αποτυχία</string>
   <string name="installer_abort_title">Έξοδος σίγουρα;</string>
-  <string name="installer_abort_body">Είστε βέβαιοι ότι θέλετε να ακυρώσετε μια σε εξέλιξη εγκατάσταση; Τα προσωρινά αποθηκευμένα αρχεία θα καθαριστούν για να αποφευχθεί η διαφθορά.</string>
   <string name="updater_body">Μια νέα ενημέρωση έχει κυκλοφορήσει για το Aliucord Manager! Μπορεί να απαιτείται για να λειτουργήσει σωστά. Θα θέλατε να ενημερώσετε;</string>
   <string name="updater_title">Ενημέρωση σε %1$s</string>
   <string name="updater_fail">Failed to check for updates!</string>
@@ -160,7 +148,7 @@
   <string name="iconopts_variant_desc_discord">Does not alter the original icon, instead only adding the missing monochrome icon to the APK.</string>
   <string name="iconopts_variant_desc_aliucord">Changes the original icon color to Aliucord\'s branding.</string>
   <string name="iconopts_variant_desc_color">Select a custom icon background color.</string>
-  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Android 8+ only.</string>
+  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Maximum image size is 256KiB.</string>
   <string name="iconopts_colorpicker_title">Hue &amp; Saturation</string>
   <string name="iconopts_colorpicker_desc">The main HSV color components.</string>
   <string name="iconopts_lightness_title">Lightness</string>
@@ -210,9 +198,7 @@
   <string name="fun_fact_5">Did you know AliucordRN spawned Enmity and Vendetta?</string>
   <string name="fun_fact_6">Having issues? Visit the #support channel in our Discord!</string>
   <string name="fun_fact_7">The IWillCrashYourDiscord plugin crashes your discord.</string>
-  <string name="fun_fact_8">\"@Vendicated my bad.\"</string>
   <string name="fun_fact_9">Aliucord can run on WearOS</string>
   <string name="fun_fact_10">Aliucord uses the *real* old UI, from mid-2022!</string>
   <string name="fun_fact_11">There was an attempt to make Aliucord run on iOS…</string>
-  <string name="fun_fact_12">veeeee 😭</string>
 </resources>
