--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -2,9 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <string name="app_name">Aliucord Manager</string>
   <string name="app_description">Una modificación de la aplicación de Discord para Android</string>
-  <string name="aliucord">Aliucord</string>
-  <string name="discord">Discord</string>
-  <string name="github">GitHub</string>
   <string name="support_server">Servidor de soporte</string>
   <string name="installer">Instalador</string>
   <string name="action_cancel">Cancelar</string>
@@ -18,11 +15,9 @@
   <string name="action_install">Instalar</string>
   <string name="action_uninstall">Desinstalar</string>
   <string name="action_add_install">Añadir instalación</string>
-  <string name="action_update_install">Update Aliucord Installation</string>
   <string name="action_update">Actualizar</string>
   <string name="action_clear">Limpiar</string>
   <string name="action_launch">Abrir</string>
-  <string name="action_launch_aliucord">Launch</string>
   <string name="action_close">Cerrar</string>
   <string name="action_open_settings">Abrir ajustes</string>
   <string name="action_search">Buscar</string>
@@ -35,7 +30,6 @@
   <string name="action_open_info">Abrir información</string>
   <string name="action_reset_default">Restablecer al valor predeterminado</string>
   <string name="permissions_grant_title">Otorgar permisos</string>
-  <string name="storage_permissions_grant_body">Para que Aliucord Manager funcione correctamente, necesitas darle permisos de almacenamiento. Pues, por el hecho de que los datos compartidos se guardan en ~/Aliucord, se necesitan estos permisos para que Aliucord Manager funcione.</string>
   <string name="install_permissions_grant_body">Installing Aliucord requires granting permissions to install apps from unknown sources.</string>
   <string name="installs_no_installs">¡No se encontraron instalaciones!</string>
   <string name="launch_aliucord_fail">Error al abrir Aliucord</string>
@@ -47,9 +41,8 @@
   <string name="setting_dynamic_color">Colores dinámicos</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_developer_options">Opciones de desarrollador</string>
-  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Mantener los APK parcheados</string>
-  <string name="setting_keep_patched_apks_desc">No eliminar los APK parcheados después de la instalación (para instalar manualmente)</string>
   <string name="settings_clear_cache">Limpiar caché</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Oscuro</string>
@@ -57,10 +50,8 @@
   <string name="plugins_title">Complementos</string>
   <string name="plugins_view_changelog">Ver el registro de cambios para %1$s</string>
   <string name="plugins_delete_plugin">Uninstall %s</string>
-  <string name="plugins_delete_plugin_body">¿Seguro que quieres desinstalar este complemento?</string>
   <string name="plugins_none_installed">¡No hay complementos instalados!</string>
   <string name="plugins_changelog_media">Media de cambios</string>
-  <string name="plugins_plugin_title">§plugin§%1$s§ v%2$s</string>
   <string name="plugins_error">¡Se ha producido un error al procesar los complementos!</string>
   <string name="navigation_back">Volver</string>
   <string name="navigation_about">Acerca de</string>
@@ -68,10 +59,9 @@
   <string name="navigation_settings">Ajustes</string>
   <string name="contributors_lead">Lead</string>
   <string name="contributors">Contribuidores</string>
-  <string name="contributors_contributions">%o contribuciones</string>
+  <string name="contributors_contributions">%s contribuciones</string>
   <string name="network_load_fail">Fallo al cargar</string>
   <string name="network_warning_title">Red medida</string>
-  <string name="network_warning_body">Parece que estás conectado a datos móviles o a una red potencialmente medida. Para continuar con la instalación, se pueden descargar varios cientos de megabytes. ¿Seguro de que quieres continuar?</string>
   <string name="network_warning_disable">Don\'t show this again</string>
   <string name="version_supported">Versión soportada:</string>
   <string name="version_none">Ninguno</string>
@@ -103,10 +93,9 @@
   <string name="install_group_patch">Parchear APKs</string>
   <string name="install_group_install">Instalar</string>
   <string name="patch_step_fetch_kt_version">Obteniendo la versión de destino de Discord</string>
-  <string name="patch_step_downgrade_check">Comprobando instalaciones antiguas</string>
   <string name="patch_step_dl_kt_apk">Descargando APK de Discord</string>
   <string name="patch_step_dl_kotlin">Descargando librería Kotlin</string>
-  <string name="patch_step_dl_injector">Descargando inyector</string>
+  <string name="patch_step_dl_injector">Descargando Aliucord inyector</string>
   <string name="patch_step_dl_aliuhook">Descargando la librería Aliuhook</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Copiando dependencias</string>
@@ -127,7 +116,7 @@
   <string name="status_success">Completado</string>
   <string name="status_failed">Fallido</string>
   <string name="installer_abort_title">¿Seguro que quieres salir?</string>
-  <string name="installer_abort_body">¿Seguro de que realmente quieres abortar una instalación en progreso? Los archivos almacenados en caché se borrarán para evitar la corrupción.</string>
+  <string name="installer_abort_body">¿Seguro de que realmente quieres abortar una instalación en progreso?</string>
   <string name="updater_body">¡Se ha publicado una nueva actualización para Aliucord Manager! Puede que sea necesaria para funcionar correctamente. ¿Quieres actualizar?</string>
   <string name="updater_title">Actualizada a %1$s</string>
   <string name="updater_fail">Failed to check for updates!</string>
@@ -148,7 +137,6 @@
   <string name="patchopts_debuggable_title">Depurable</string>
   <string name="patchopts_debuggable_desc">Activa la bandera de manifiesto depurable. ¡Úsalo solo si sabes lo que estás haciendo!</string>
   <string name="patchopts_icon_title">Reemplazar icono de la aplicación</string>
-  <string name="patchopts_icon_desc">Cambia el icono de la aplicación para usar la marca de Aliucord en lugar de la propia de Discord.</string>
   <string name="patchopts_divider_basic">Básico</string>
   <string name="patchopts_divider_advanced">Avanzado</string>
   <string name="patchopts_warning_invalid_iconopts">The selected icon options are invalid!</string>
@@ -160,7 +148,7 @@
   <string name="iconopts_variant_desc_discord">Does not alter the original icon, instead only adding the missing monochrome icon to the APK.</string>
   <string name="iconopts_variant_desc_aliucord">Changes the original icon color to Aliucord\'s branding.</string>
   <string name="iconopts_variant_desc_color">Select a custom icon background color.</string>
-  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Android 8+ only.</string>
+  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Maximum image size is 256KiB.</string>
   <string name="iconopts_colorpicker_title">Hue &amp; Saturation</string>
   <string name="iconopts_colorpicker_desc">The main HSV color components.</string>
   <string name="iconopts_lightness_title">Lightness</string>
@@ -210,9 +198,7 @@
   <string name="fun_fact_5">¿Sabías que AliucordRN creo a Enmity y Vendetta?</string>
   <string name="fun_fact_6">¿Tienes problemas? ¡Visita el canal #support en nuestro Discord!</string>
   <string name="fun_fact_7">El plugin IWillCrashYourDiscord crashea discord.</string>
-  <string name="fun_fact_8">\"@Vendicated culpa mía.\"</string>
   <string name="fun_fact_9">Aliucord puede correr en WearOS</string>
   <string name="fun_fact_10">Aliucord utiliza la interfaz *real* de mediados de 2022!</string>
   <string name="fun_fact_11">Hubo un intento de ejecutar Aliucord en iOS…</string>
-  <string name="fun_fact_12">veeeee 😭</string>
 </resources>
