--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -2,9 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <string name="app_name">Aliucord Manager</string>
   <string name="app_description">Una modifica per l\'app di Discord su Android</string>
-  <string name="aliucord">Aliucord</string>
-  <string name="discord">Discord</string>
-  <string name="github">GitHub</string>
   <string name="support_server">Server di supporto</string>
   <string name="installer">Installer</string>
   <string name="action_cancel">Cancel</string>
@@ -17,12 +14,10 @@
   <string name="action_dismiss">Annulla</string>
   <string name="action_install">Install</string>
   <string name="action_uninstall">Disinstalla</string>
-  <string name="action_add_install">Add Installation</string>
-  <string name="action_update_install">Update Aliucord Installation</string>
+  <string name="action_add_install">New Install</string>
   <string name="action_update">Aggiorna</string>
   <string name="action_clear">Pulisci</string>
   <string name="action_launch">Avvia</string>
-  <string name="action_launch_aliucord">Launch</string>
   <string name="action_close">Chiudi</string>
   <string name="action_open_settings">Apri impostazioni</string>
   <string name="action_search">Cerca</string>
@@ -31,11 +26,11 @@
   <string name="action_expand">Espandi</string>
   <string name="action_copied">Copiato!</string>
   <string name="action_cleared_cache">Cache svuotata!</string>
-  <string name="action_exit_anyways">Exit anyways</string>
-  <string name="action_open_info">Open info</string>
+  <string name="action_exit_anyways">Exit Anyways</string>
+  <string name="action_open_info">Open Info</string>
   <string name="action_reset_default">Reset to default</string>
   <string name="permissions_grant_title">Concedi Permessi</string>
-  <string name="storage_permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data in stored in ~/Aliucord, permissions are required in order for manager to function.</string>
+  <string name="storage_permissions_grant_body">In order for Aliucord Manager to function, file permissions are required. Since shared data is stored in ~/Aliucord, permissions are required in order to access it.</string>
   <string name="install_permissions_grant_body">Installing Aliucord requires granting permissions to install apps from unknown sources.</string>
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Avvio di Aliucord non riuscito</string>
@@ -47,9 +42,8 @@
   <string name="setting_dynamic_color">Dynamic color</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_developer_options">Opzioni sviluppatore</string>
-  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
   <string name="settings_clear_cache">Pulisci cache</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Scuro</string>
@@ -57,10 +51,8 @@
   <string name="plugins_title">Plugin</string>
   <string name="plugins_view_changelog">View changelog for %1$s</string>
   <string name="plugins_delete_plugin">Uninstall %s</string>
-  <string name="plugins_delete_plugin_body">Are you sure you want to uninstall this plugin?</string>
   <string name="plugins_none_installed">No plugins installed!</string>
   <string name="plugins_changelog_media">Changelog Media</string>
-  <string name="plugins_plugin_title">§plugin§%1$s§ v%2$s</string>
   <string name="plugins_error">An error occurred while processing plugins!</string>
   <string name="navigation_back">Indietro</string>
   <string name="navigation_about">About</string>
@@ -68,10 +60,10 @@
   <string name="navigation_settings">Impostazioni</string>
   <string name="contributors_lead">Lead</string>
   <string name="contributors">Contributors</string>
-  <string name="contributors_contributions">%o contributions</string>
+  <string name="contributors_contributions">%s contributions</string>
   <string name="network_load_fail">Failed to load</string>
   <string name="network_warning_title">Metered network</string>
-  <string name="network_warning_body">It appears you are connected to mobile data or a potentially metered network. In order to continue with the installation, several hundred megabytes could be downloaded. Are you sure you want to continue?</string>
+  <string name="network_warning_body">It appears you are connected to mobile data or a potentially metered network. Continuing with the installation may result in several hundred megabytes being downloaded. Are you sure you want to continue?</string>
   <string name="network_warning_disable">Don\'t show this again</string>
   <string name="version_supported">Supported version:</string>
   <string name="version_none">None</string>
@@ -83,7 +75,7 @@
   <string name="installer_file_save_success">Saved to %s</string>
   <string name="installer_file_save_failed">Failed to save %s</string>
   <string name="installer_install_success">Successfully installed Aliucord</string>
-  <string name="installer_install_aborted">Aborted Aliucord installation</string>
+  <string name="installer_install_aborted">Cancelled Aliucord installation</string>
   <string name="installer_uninstall_new">Please uninstall your current version of Aliucord in order to continue!</string>
   <string name="installer_uninstall_success">Successfully uninstalled Aliucord</string>
   <string name="installer_uninstall_aborted">Cancelled uninstallation</string>
@@ -95,7 +87,7 @@
   <string name="install_error_blocked">Installation was blocked</string>
   <string name="install_error_invalid">One or more APKs were invalid or corrupt</string>
   <string name="install_error_conflict">Conflicts with an existing app, usually due to mismatched signatures</string>
-  <string name="install_error_storage">Not enough available storage to install</string>
+  <string name="install_error_storage">Not enough storage available to install</string>
   <string name="install_error_incompatible">Application is incompatible with this device</string>
   <string name="install_error_timeout">Installation timed out</string>
   <string name="install_group_prepare">Prepare</string>
@@ -103,14 +95,14 @@
   <string name="install_group_patch">Patch APKs</string>
   <string name="install_group_install">Install</string>
   <string name="patch_step_fetch_kt_version">Fetching target Discord version</string>
-  <string name="patch_step_downgrade_check">Checking for older installations</string>
+  <string name="patch_step_downgrade_check">Checking for newer installations</string>
   <string name="patch_step_dl_kt_apk">Downloading Discord APK</string>
   <string name="patch_step_dl_kotlin">Downloading Kotlin library</string>
-  <string name="patch_step_dl_injector">Downloading injector</string>
+  <string name="patch_step_dl_injector">Downloading Aliucord Injector</string>
   <string name="patch_step_dl_aliuhook">Downloading Aliuhook library</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Copying dependencies</string>
-  <string name="patch_step_patch_manifests">Patching apk manifests</string>
+  <string name="patch_step_patch_manifests">Patching APK manifest</string>
   <string name="patch_step_patch_icon">Patching app icon</string>
   <string name="patch_step_add_injector">Adding Aliucord injector</string>
   <string name="patch_step_add_aliuhook">Adding Aliuhook library</string>
@@ -127,7 +119,7 @@
   <string name="status_success">Successo</string>
   <string name="status_failed">Fallito</string>
   <string name="installer_abort_title">Really exit?</string>
-  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
+  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation?</string>
   <string name="updater_body">A new update has been released for Aliucord Manager! It may be required in order to function properly. Would you like to update?</string>
   <string name="updater_title">Update to %1$s</string>
   <string name="updater_fail">Failed to check for updates!</string>
@@ -148,7 +140,7 @@
   <string name="patchopts_debuggable_title">Debuggable</string>
   <string name="patchopts_debuggable_desc">Enable the debuggable manifest flag. Only use this if you know what you are doing!</string>
   <string name="patchopts_icon_title">Replace app icon</string>
-  <string name="patchopts_icon_desc">Changes the app\'s icon to use Aliucord branding instead of Discord\'s own.</string>
+  <string name="patchopts_icon_desc">Change the app\'s icon to Aliucord\'s icon (or a custom one) instead of Discord\'s.</string>
   <string name="patchopts_divider_basic">Basic</string>
   <string name="patchopts_divider_advanced">Advanced</string>
   <string name="patchopts_warning_invalid_iconopts">The selected icon options are invalid!</string>
@@ -160,7 +152,7 @@
   <string name="iconopts_variant_desc_discord">Does not alter the original icon, instead only adding the missing monochrome icon to the APK.</string>
   <string name="iconopts_variant_desc_aliucord">Changes the original icon color to Aliucord\'s branding.</string>
   <string name="iconopts_variant_desc_color">Select a custom icon background color.</string>
-  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Android 8+ only.</string>
+  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Maximum image size is 256KiB.</string>
   <string name="iconopts_colorpicker_title">Hue &amp; Saturation</string>
   <string name="iconopts_colorpicker_desc">The main HSV color components.</string>
   <string name="iconopts_lightness_title">Lightness</string>
@@ -210,9 +202,7 @@
   <string name="fun_fact_5">Did you know AliucordRN spawned Enmity and Vendetta?</string>
   <string name="fun_fact_6">Having issues? Visit the #support channel in our Discord!</string>
   <string name="fun_fact_7">The IWillCrashYourDiscord plugin crashes your discord.</string>
-  <string name="fun_fact_8">\"@Vendicated my bad.\"</string>
   <string name="fun_fact_9">Aliucord can run on WearOS</string>
   <string name="fun_fact_10">Aliucord uses the *real* old UI, from mid-2022!</string>
   <string name="fun_fact_11">There was an attempt to make Aliucord run on iOS…</string>
-  <string name="fun_fact_12">veeeee 😭</string>
 </resources>
