--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -2,9 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <string name="app_name">Aliucord Yöneticisiymiş</string>
   <string name="app_description">Discord Android Uygulaması için bir modifikasyon</string>
-  <string name="aliucord">Aliucord</string>
-  <string name="discord">Discord</string>
-  <string name="github">GitHub</string>
   <string name="support_server">Destek Sunucusu</string>
   <string name="installer">Yükleyici</string>
   <string name="action_cancel">Cancel</string>
@@ -17,12 +14,10 @@
   <string name="action_dismiss">Yoksay</string>
   <string name="action_install">Install</string>
   <string name="action_uninstall">Kaldır</string>
-  <string name="action_add_install">Add Installation</string>
-  <string name="action_update_install">Update Aliucord Installation</string>
+  <string name="action_add_install">New Install</string>
   <string name="action_update">Güncelle</string>
   <string name="action_clear">Temizle</string>
   <string name="action_launch">Başlat</string>
-  <string name="action_launch_aliucord">Launch</string>
   <string name="action_close">Kapat</string>
   <string name="action_open_settings">Ayarları aç</string>
   <string name="action_search">Ara</string>
@@ -31,8 +26,8 @@
   <string name="action_expand">Genişlet</string>
   <string name="action_copied">Kopyalandı!</string>
   <string name="action_cleared_cache">Önbellek temizlendi!</string>
-  <string name="action_exit_anyways">Exit anyways</string>
-  <string name="action_open_info">Open info</string>
+  <string name="action_exit_anyways">Exit Anyways</string>
+  <string name="action_open_info">Open Info</string>
   <string name="action_reset_default">Reset to default</string>
   <string name="permissions_grant_title">İzinleri Ver</string>
   <string name="storage_permissions_grant_body">Aliucord Yöneticisinin düzgün çalışması için, dosya izinleri vermeniz gerekli. Paylaşılan uygulama verileri ~/Aliucord\'ta depolandığı için, yöneticinin çalışması izin gerektirir.</string>
@@ -47,9 +42,8 @@
   <string name="setting_dynamic_color">Dinamik renk</string>
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_developer_options">Geliştirici seçenekleri</string>
-  <string name="setting_developer_options_desc">Don\'t enable this unless you know what you are doing!</string>
+  <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
-  <string name="setting_keep_patched_apks_desc">Don\'t delete patched APKs after installing (for installing manually)</string>
   <string name="settings_clear_cache">Önbelleği temizle</string>
   <string name="theme_system">Sistem</string>
   <string name="theme_dark">Koyu</string>
@@ -57,10 +51,8 @@
   <string name="plugins_title">Eklentiler</string>
   <string name="plugins_view_changelog">%1$s için Güncelleme Geçmişine Bak</string>
   <string name="plugins_delete_plugin">Uninstall %s</string>
-  <string name="plugins_delete_plugin_body">Bu eklenti\'yi silmek istediğine emin misin?</string>
   <string name="plugins_none_installed">Yüklü eklenti yok!</string>
   <string name="plugins_changelog_media">Güncelleme Geçmişi Medyası</string>
-  <string name="plugins_plugin_title">§eklenti§%1$s§ sürüm%2$s</string>
   <string name="plugins_error">Eklentiler işlenirken bir hata oluştu!</string>
   <string name="navigation_back">Geri</string>
   <string name="navigation_about">Hakkında</string>
@@ -68,10 +60,10 @@
   <string name="navigation_settings">Ayarlar</string>
   <string name="contributors_lead">Lead</string>
   <string name="contributors">Katkıda Bulunanlar</string>
-  <string name="contributors_contributions">%o Katılımcı</string>
+  <string name="contributors_contributions">%s Katılımcı</string>
   <string name="network_load_fail">Yükleme başarısız oldu</string>
   <string name="network_warning_title">Metered network</string>
-  <string name="network_warning_body">It appears you are connected to mobile data or a potentially metered network. In order to continue with the installation, several hundred megabytes could be downloaded. Are you sure you want to continue?</string>
+  <string name="network_warning_body">It appears you are connected to mobile data or a potentially metered network. Continuing with the installation may result in several hundred megabytes being downloaded. Are you sure you want to continue?</string>
   <string name="network_warning_disable">Don\'t show this again</string>
   <string name="version_supported">Desteklenen sürüm:</string>
   <string name="version_none">Hiçbiri</string>
@@ -96,7 +88,7 @@ lütfen silin!</string>
   <string name="install_error_blocked">Installation was blocked</string>
   <string name="install_error_invalid">One or more APKs were invalid or corrupt</string>
   <string name="install_error_conflict">Conflicts with an existing app, usually due to mismatched signatures</string>
-  <string name="install_error_storage">Not enough available storage to install</string>
+  <string name="install_error_storage">Not enough storage available to install</string>
   <string name="install_error_incompatible">Application is incompatible with this device</string>
   <string name="install_error_timeout">Installation timed out</string>
   <string name="install_group_prepare">Prepare</string>
@@ -104,10 +96,9 @@ lütfen silin!</string>
   <string name="install_group_patch">APKları Yamala</string>
   <string name="install_group_install">Kur</string>
   <string name="patch_step_fetch_kt_version">Hedef Discord sürümü alınıyor</string>
-  <string name="patch_step_downgrade_check">Checking for older installations</string>
+  <string name="patch_step_downgrade_check">Checking for newer installations</string>
   <string name="patch_step_dl_kt_apk">Discord APK\'sı indiriliyor</string>
   <string name="patch_step_dl_kotlin">Kotlin kütüphanesi indiriliyor</string>
-  <string name="patch_step_dl_injector">Aşılayıcı indiriliyor</string>
   <string name="patch_step_dl_aliuhook">Aliuhook kütüphanesi indiriliyor</string>
   <string name="patch_step_dl_smali">Downloading smali patches</string>
   <string name="patch_step_copy_deps">Copying dependencies</string>
@@ -128,7 +119,7 @@ lütfen silin!</string>
   <string name="status_success">Başarılı</string>
   <string name="status_failed">Başarısız</string>
   <string name="installer_abort_title">Really exit?</string>
-  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
+  <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation?</string>
   <string name="updater_body">Aliucord Yöneticisi için yeni bir güncelleme yayınlandı! Düzgün çalışması için gerekli olabilir. Güncellemek ister misin?</string>
   <string name="updater_title">%1$s\'a Güncelle</string>
   <string name="updater_fail">Failed to check for updates!</string>
@@ -149,7 +140,7 @@ lütfen silin!</string>
   <string name="patchopts_debuggable_title">Debuggable</string>
   <string name="patchopts_debuggable_desc">Enable the debuggable manifest flag. Only use this if you know what you are doing!</string>
   <string name="patchopts_icon_title">Replace app icon</string>
-  <string name="patchopts_icon_desc">Changes the app\'s icon to use Aliucord branding instead of Discord\'s own.</string>
+  <string name="patchopts_icon_desc">Change the app\'s icon to Aliucord\'s icon (or a custom one) instead of Discord\'s.</string>
   <string name="patchopts_divider_basic">Basic</string>
   <string name="patchopts_divider_advanced">Advanced</string>
   <string name="patchopts_warning_invalid_iconopts">The selected icon options are invalid!</string>
@@ -161,7 +152,7 @@ lütfen silin!</string>
   <string name="iconopts_variant_desc_discord">Does not alter the original icon, instead only adding the missing monochrome icon to the APK.</string>
   <string name="iconopts_variant_desc_aliucord">Changes the original icon color to Aliucord\'s branding.</string>
   <string name="iconopts_variant_desc_color">Select a custom icon background color.</string>
-  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Android 8+ only.</string>
+  <string name="iconopts_variant_desc_image">Select a custom replacement image. Note that the image must have sufficient padding as per the Adaptive Icon foreground guidelines. Maximum image size is 256KiB.</string>
   <string name="iconopts_colorpicker_title">Hue &amp; Saturation</string>
   <string name="iconopts_colorpicker_desc">The main HSV color components.</string>
   <string name="iconopts_lightness_title">Lightness</string>
@@ -211,9 +202,7 @@ lütfen silin!</string>
   <string name="fun_fact_5">Did you know AliucordRN spawned Enmity and Vendetta?</string>
   <string name="fun_fact_6">Having issues? Visit the #support channel in our Discord!</string>
   <string name="fun_fact_7">The IWillCrashYourDiscord plugin crashes your discord.</string>
-  <string name="fun_fact_8">\"@Vendicated my bad.\"</string>
   <string name="fun_fact_9">Aliucord can run on WearOS</string>
   <string name="fun_fact_10">Aliucord uses the *real* old UI, from mid-2022!</string>
   <string name="fun_fact_11">There was an attempt to make Aliucord run on iOS…</string>
-  <string name="fun_fact_12">veeeee 😭</string>
 </resources>
